RESOLVED FIXED312222
REGRESSION(309405@main): Password field shortens whenever selected
https://bugs.webkit.org/show_bug.cgi?id=312222
Summary REGRESSION(309405@main): Password field shortens whenever selected
alan
Reported 2026-04-13 19:03:45 PDT
Attachments
Patch (8.81 KB, patch)
2026-04-13 19:44 PDT, alan
no flags
[fast-cq]Patch (8.74 KB, patch)
2026-04-14 05:09 PDT, alan
no flags
alan
Comment 1 2026-04-13 19:44:50 PDT
Simon Fraser (smfr)
Comment 2 2026-04-13 19:51:21 PDT
Comment on attachment 479056 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=479056&action=review > Source/WebCore/rendering/RenderBox.cpp:2934 > + auto isNonFloatingBlockThatAvoidsFloats = !isFloating() && avoidsFloats(); I don't like `auto` instead of `bool`; it makes me wonder if this is an optional or some more complex type.
alan
Comment 3 2026-04-14 05:09:00 PDT
Created attachment 479061 [details] [fast-cq]Patch
EWS
Comment 4 2026-04-14 06:58:18 PDT
Committed 311195@main (5c203d718b31): <https://commits.webkit.org/311195@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 479061 [details].
Note You need to log in before you can comment on or make changes to this bug.