REGRESSION(309405@main): Password field shortens whenever selected https://bugs.webkit.org/show_bug.cgi?id=312222 <rdar://174369260>

Reviewed by Simon Fraser.

Floats resolve stretch against the containing block (CSS Sizing 4,
section 6.1), not the space remaining after other floats. Only
non-floating blocks that establish a formatting context need to
avoid float intrusion (CSS2, section 9.5.2).

* LayoutTests/imported/w3c/web-platform-tests/css/css-sizing/stretch-float-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-sizing/stretch-float-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-sizing/stretch-float-with-sibling-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-sizing/stretch-float-with-sibling-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-sizing/stretch-float-with-sibling.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-sizing/stretch-float.html: Added.
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::computeSizingKeywordLogicalWidthUsing const):

Canonical link: https://commits.webkit.org/311195@main